force-app/main/default/objects/Invoice_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Description__c</columns>
    <columns>Hours__c</columns>
    <columns>Hourly_Rate__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>